k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    volumeMounts:
    - mountPath: "/app/etc"
      name: etc-pv
  volumes:
  - name: etc-pv
    persistentVolumeClaim:
      claimName: scampml-ede-etc
