k8s/scampml-ede-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scampml-ede-5001
  labels:
    app: scampml-services
    group: detection
    type: service
    name: ede
spec:
  ports:
    - port: 5001
      name: dgw-http1
  selector:
    app: scampml-services
    group: detection
    type: deployment
    name: ede
---
apiVersion: v1
kind: Service
metadata:
  name: scampml-ede-8050
  labels:
    app: scampml-services
    group: detection
    type: service
    name: ede
spec:
  ports:
    - port: 8050
      name: dgw-http2
  selector:
    app: scampml-services
    group: detection
    type: deployment
    name: ede
